Fix namespacing of inline rolls

--- a/src/styles/system/applications/sheets/journal-entry-sheet.css
+++ b/src/styles/system/applications/sheets/journal-entry-sheet.css
@@ -132,7 +132,7 @@ background: linear-gradient(to right, var(--draw-steel-c-laserline), transparent
 }
 
 .draw-steel .content-link,
-.inline-roll {
+.draw-steel .inline-roll {
   background: var(--draw-steel-c-white);
   border: 1px solid var(--draw-steel-c-laserline);
   border-radius: 2px;
@@ -263,7 +263,7 @@ background: linear-gradient(to right, var(--draw-steel-c-laserline), transparent
         /* left bottom */
         0% var(--corner)
         /* left top */
-        );
+      );
       --corner: 1em;
       background: var(--draw-steel-c-black);
       color: var(--draw-steel-c-white);
